--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
