--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -93,11 +95,15 @@
           <p><i class="fas fa-envelope"></i> neeraj@example.com</p>
           <p>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Neerajhac96" target="_blank">github.com/Neerajhac96</a>
+            <a href="https://github.com/Neerajhac96" target="_blank"
+              >github.com/Neerajhac96</a
+            >
           </p>
           <p>
             <i class="fab fa-linkedin"></i>
-            <a href="https://linkedin.com/in/neerajhac96" target="_blank">linkedin.com/in/neerajhac96</a>
+            <a href="https://linkedin.com/in/neerajhac96" target="_blank"
+              >linkedin.com/in/neerajhac96</a
+            >
           </p>
         </div>
       </section>
