--- a/index.html
+++ b/index.html
@@ -67,20 +67,18 @@
         <h2>My Projects</h2>
         <div class="projects-container">
           <div class="project-card">
-            <h3>🎯 House Price Prediction</h3>
+            <h3>🎯 Web-site clone</h3>
             <p>
-              Used Linear Regression in Python to predict house prices using
-              Boston dataset.
+              A clone of popular websites like Amazon and Spotify, built using HTML, CSS, and JavaScript.
             </p>
-            <a href="https://github.com/Nee" target="_blank">View on GitHub</a>
+            <a href="https://github.com/Neerajhac96/Web-project-/tree/main/web-clones" target="_blank">View on GitHub</a>
           </div>
           <div class="project-card">
-            <h3>📝 To-Do Web App</h3>
+            <h3>📝 Weather checker</h3>
             <p>
-              A simple task manager built using HTML, CSS & JavaScript with
-              add/remove feature.
+              A simple task manager built using HTML, CSS & JavaScript using Weather API.
             </p>
-            <a href="https://github.com/Neerajhac96/TodoApp" target="_blank"
+            <a href="https://github.com/Neerajhac96/Web-project-/tree/main/weather_app" target="_blank"
               >View on GitHub</a
             >
           </div>
@@ -92,17 +90,16 @@
       <section id="contact">
         <h2>Contact Me</h2>
         <div class="contact-info">
-          <p><i class="fas fa-envelope"></i> neeraj@example.com</p>
+          <p><i class="fas fa-envelope"></i> niraj.kumar.in07@gmail.com</p>
           <p>
             <i class="fab fa-github"></i>
             <a href="https://github.com/Neerajhac96" target="_blank"
-              >github.com/Neerajhac96</a
+              >github.com</a
             >
           </p>
           <p>
             <i class="fab fa-linkedin"></i>
-            <a href="https://linkedin.com/in/neerajhac96" target="_blank"
-              >linkedin.com/in/neerajhac96</a
+            <a href="https://www.linkedin.com/in/niraj-kumar-649215264/" target="_blank">linkedin.com</a
             >
           </p>
         </div>
