--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <nav>
         <div class="left">Niraj's portfolio</div>
         <div class="right">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
             <li><a href="#projects">Project</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact Me</a></li>
@@ -46,9 +45,8 @@
       </nav>
     </header>
 
-    <main>
       <!-- Intro Section -->
-      <section class="firstsection">
+    <section class="firstsection">
         <div class="leftsection">
           My name is <span style="color: blueviolet">Niraj</span>
           <div>I am passionate</div>
@@ -56,9 +54,9 @@
           <span id="element"></span>
         </div>
         <div class="rightsection">
-          <img src="dev.png" alt="" />
+          <img src="portfolio-image.png" alt="" />
         </div>
-      </section>
+    </section>
 
       <hr />
 
@@ -85,23 +83,20 @@
         </div>
       </section>
       <!-- ======== PROJECTS SECTION END ======== -->
-
+       <hr>
       <!-- contact section -->
       <section id="contact">
         <h2>Contact Me</h2>
+        <br>
         <div class="contact-info">
-          <p><i class="fas fa-envelope"></i> niraj.kumar.in07@gmail.com</p>
-          <p>
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/Neerajhac96" target="_blank"
-              >github.com</a
-            >
-          </p>
-          <p>
-            <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/niraj-kumar-649215264/" target="_blank">linkedin.com</a
-            >
-          </p>
+          <i class="fas fa-envelope"></i> niraj.kumar.in07@gmail.com
+          <a href="https://github.com/Neerajhac96" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/niraj-kumar-649215264/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
       </section>
     </main>
@@ -110,7 +105,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed("#element", {
-        strings: ["<i>Web Developer</i>", "Video Editing"],
+        strings: ["<i>Web Developer</i>", "Frontend Developer"],
         typeSpeed: 50,
       });
     </script>
